fix(theme): wrap Tooltip in Theme to fix inconsistency across themes

--- a/galasa-ui/src/styles/Selector.module.css
+++ b/galasa-ui/src/styles/Selector.module.css
@@ -26,6 +26,7 @@
   gap: 0.5rem;
   padding: 0.25rem 0.5rem;
   width: fit-content;
+  background-color: #262626;
 }
 
 .iconButton {
@@ -33,7 +34,6 @@
   border: none;
   padding: 0.5rem;
   cursor: pointer;
-  color: var(--cds-icon-primary);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,7 +42,7 @@
 }
 
 .iconButton:hover {
-  background-color: var(--cds-layer-hover);
+  background-color: #474747;
 }
 
 .iconButton:disabled {
@@ -51,6 +51,9 @@
 }
 
 .active {
-  background-color: var(--cds-layer-selected);
+  background-color: #474747;
   color: var(--cds-icon-on-color);
+}
+.themeContainer {
+  border-radius: 0.35rem;
 }
